Fix the alignment of header

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 50px;
 }
 
 .logo {
@@ -9,11 +13,24 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-self: center;
+  margin: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 10px;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.left-links, .right-links{
+  align-content: center;
+  margin: 10px;
 }
 
 a {
